nestum/tests/ui/fail_external_empty_args.stderr
error: invalid #[nestum] on variant; use #[nestum(external = "path::to::Enum")]
 --> tests/ui/fail_external_empty_args.rs:8:5
  |
8 |     #[nestum()]
  |     ^^^^^^^^^^^
