nestum/tests/ui/fail_external_empty_args.rs
use nestum::nestum;

#[nestum]
pub enum Inner { A }

#[nestum]
pub enum Outer {
    #[nestum()]
    Wrap(Inner),
}

fn main() {}
